finished documenting the project in the README and fixed some Docker stuff to that you can run run the full app in a Docker image and also put the DB in Docker with the Client running locally (npm run dev)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,8 @@ services:
     depends_on:
       - db
     environment:
-      DATABASE_URL: postgres://user:password@db:5432/nftcart
+      DATABASE_URL: postgresql://user:password@db:5432/nftcart?schema=public
+      NODE_ENV: production
 
 volumes:
   postgres_data:
