--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nft-marketplace",
+  "name": "joshua-brigati-kinetic-take-home",
   "version": "0.1.0",
   "private": true,
   "scripts": {
